--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -3,16 +3,16 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 0 0 0;
+  --background-start-rgb: 214 219 220;
+  --background-end-rgb: 255 255 255;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-rgb: 255 255 255;
+    --background-start-rgb: 0 0 0;
+    --background-end-rgb: 0 0 0;
   }
 }
 
@@ -31,10 +31,30 @@ body {
   transition: color 0.2s, border 0.2s;
 }
 
-.words {
-  background: linear-gradient(to right, black 25%, white 50%, black 75%);
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
+.words-container {
+  .words-container-left {
+    background: linear-gradient(
+      to right,
+      rgba(var(--background-start-rgb)) 25%,
+      rgba(var(--foreground-rgb) / 0.35) 100%
+    );
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .words-container-right {
+    background: linear-gradient(
+      to left,
+      rgb(var(--background-start-rgb)) 25%,
+      rgb(var(--foreground-rgb) / 0.35) 100%
+    );
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .words-container-center {
+    color: white;
+  }
 
   display: flex;
   justify-content: space-between;
